FEAT: Add Docker workflow for reproducible execution
- Replace Dockerfile with optimized miniconda3-based container
- Add docker-compose.yml for simplified container management
- Create run_docker.sh and run_docker.bat for cross-platform execution
- Update README.md with Docker workflow as primary method
- Add data_input/ and data_output/ to .gitignore
- Solve RGI installation issues via containerization
- Guarantee 100% reproducibility across all platforms

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,10 @@
 /test_output/
 /test_pipeline/
 
+# Docker data directories
+/data_input/
+/data_output/
+
 # Ignore specific log and data files that might be created in the root
 *.log
 *.csv
