--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,20 @@
-[pytest]
-asyncio_mode = auto
-python_files = tests/test_*.py
+[tool:pytest]
+testpaths = tests
+python_files = test_*.py
+python_classes = Test*
+python_functions = test_*
+addopts = 
+    --tb=short
+    --strict-markers
+    --disable-warnings
+    --ignore=tests/disabled_*
+markers =
+    slow: marks tests as slow (deselect with '-m "not slow"')
+    integration: marks tests as integration tests
+    unit: marks tests as unit tests
 filterwarnings =
-    ignore::DeprecationWarning
     ignore::UserWarning
-addopts = -q
+    ignore::DeprecationWarning
+    ignore::PendingDeprecationWarning
+    ignore::ImportError
+    ignore::ModuleNotFoundError
