feat: Comprehensive Multi-Database Genomic Profiling Enhancement
 MAJOR UPGRADE: RGI  Abricate Migration + Multi-Database Analysis

## Core Enhancements
- **abricate_runner.py**: New multi-database scanner with failure-proof design
  - Dynamic output naming: [genome_id]_[database_name].tsv
  - Per-genome error isolation and structured result tracking
  - ScanResults dataclass for comprehensive scan management

- **production_pipeline_orchestrator.py**: Enterprise-grade multi-database orchestration
  - CARD (critical) vs VFDB/PlasmidFinder (secondary) failure handling
  - Separate output directories per database
  - Enhanced PipelineManifest with database-specific success rates

- **enhanced_html_reporter.py**: Rich genomic context reporting
  - New 'Genomic Context Analysis' section with risk profiling
  - Fail-safe VFDB virulence factor and PlasmidFinder parsing
  - Integrated per-genome pathogen characterization

## Database Coverage
- **CARD**: Antimicrobial resistance genes (critical path)
- **VFDB**: Virulence factors (contextual analysis)
- **PlasmidFinder**: Plasmid identification (mobile elements)

## Key Features
 Failure-proof design: Secondary DB failures don't stop AMR analysis
 Drop-in compatibility: Maintains existing protein extraction workflow
 Comprehensive logging and error tracking
 Clinical risk assessment and pathogen profiling
 Enterprise-grade reliability and traceability

## Migration Benefits
- Eliminates RGI dependency and installation complexity
- Faster, more reliable CARD analysis via Abricate
- Expanded genomic context with virulence and plasmid profiling
- Enhanced HTML reports with multi-dimensional pathogen characterization

Replaces: RGI-based single-database workflow
Provides: Comprehensive genomic surveillance platform

--- a/envs/abricate.yaml
+++ b/envs/abricate.yaml
@@ -1,12 +1,11 @@
-name: rgi_env
+name: abricate_env
 channels:
   - bioconda
   - conda-forge
   - defaults
 dependencies:
-  - python=3.9
-  - rgi=6.0.3
-  - card-model=3.2.3
+  - python=3.11
+  - abricate
   - biopython=1.81
   - pandas=2.0.3
   - numpy=1.24.3
